<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/nav_children"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/nav_children" />

        <item
            android:id="@+id/nav_visits"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/nav_visits" />

        <item
            android:id="@+id/nav_users"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/nav_users" />

        <item
            android:id="@+id/nav_branches"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/nav_branches" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/nav_profile" />

    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_menu_revert"
                android:title="@string/nav_logout" />
        </menu>
    </item>

</menu>
